@@ -2,6 +2,7 @@ JM 9/11/2004
 - removed Protocols, added peersim.config.FastConfig instead. The new feature
   is that FastConfig is automatic, it reads and stores "linkable" config lines
   in a transparent fashion to the protocols.
+- toString method to SingleValueHolder
 
 JM 9/11/2004
 - added nextLong(long) to CommonRandom
